scsi: mpi3mr: Update driver version to 8.14.0.5.50 (bsc#1251752, jsc#PED-14280).

--- a/series.conf
+++ b/series.conf
@@ -55333,6 +55333,7 @@
 	patches.suse/scsi-mpi3mr-Fix-race-between-config-read-submit-and-interr.patch
 	patches.suse/scsi-mpi3mr-Drop-unnecessary-volatile-from-__iomem-pointer.patch
 	patches.suse/scsi-mpi3mr-Serialize-admin-queue-BAR-writes-on-32-bit-sys.patch
+	patches.suse/scsi-mpi3mr-Update-driver-version-to-8.14.0.5.50.patch
 	patches.suse/scsi-ibmvscsi_tgt-Fix-dma_unmap_sg-nents-value.patch
 	patches.suse/scsi-core-Fix-kernel-doc-for-scsi_track_queue_full.patch
 	patches.suse/scsi-ufs-exynos-Fix-programming-of-HCI_UTRL_NEXUS_TY.patch
