scsi: mpi3mr: Fix controller init failure on fault during queue creation (bsc#1251752, jsc#PED-14280).

--- a/series.conf
+++ b/series.conf
@@ -56339,6 +56339,7 @@
 	patches.suse/scsi-pm80xx-Fix-array-index-out-of-of-bounds-on-rmmod.patch
 	patches.suse/scsi-lpfc-use-min-to-improve-code.patch
 	patches.suse/scsi-mpi3mr-Fix-device-loss-during-enclosure-reboot-.patch
+	patches.suse/scsi-mpi3mr-Fix-controller-init-failure-on-fault-dur.patch
 	patches.suse/scsi-fc-Avoid-Wflex-array-member-not-at-end-warnings.patch
 	patches.suse/scsi-qla2xxx-Use-secs_to_jiffies-instead-of-msecs_to.patch
 	patches.suse/scsi-lpfc-Use-int-type-to-store-negative-error-codes.patch
