scsi: mpi3mr: Update MPI headers to revision 37 (bsc#1251752, jsc#PED-14280).

--- a/series.conf
+++ b/series.conf
@@ -56341,6 +56341,7 @@
 	patches.suse/scsi-mpi3mr-Fix-device-loss-during-enclosure-reboot-.patch
 	patches.suse/scsi-mpi3mr-Fix-controller-init-failure-on-fault-dur.patch
 	patches.suse/scsi-mpi3mr-Fix-I-O-failures-during-controller-reset.patch
+	patches.suse/scsi-mpi3mr-Update-MPI-headers-to-revision-37.patch
 	patches.suse/scsi-fc-Avoid-Wflex-array-member-not-at-end-warnings.patch
 	patches.suse/scsi-qla2xxx-Use-secs_to_jiffies-instead-of-msecs_to.patch
 	patches.suse/scsi-lpfc-Use-int-type-to-store-negative-error-codes.patch
