--- a/series.conf
+++ b/series.conf
@@ -56343,6 +56343,7 @@
 	patches.suse/scsi-mpi3mr-Fix-I-O-failures-during-controller-reset.patch
 	patches.suse/scsi-mpi3mr-Update-MPI-headers-to-revision-37.patch
 	patches.suse/scsi-mpi3mr-Fix-premature-TM-timeouts-on-virtual-dri.patch
+	patches.suse/scsi-mpi3mr-Update-driver-version-to-8.15.0.5.50.patch
 	patches.suse/scsi-fc-Avoid-Wflex-array-member-not-at-end-warnings.patch
 	patches.suse/scsi-qla2xxx-Use-secs_to_jiffies-instead-of-msecs_to.patch
 	patches.suse/scsi-lpfc-Use-int-type-to-store-negative-error-codes.patch
