net: usb: asix: hold PM usage ref to avoid PM/MDIO + RTNL deadlock (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34531,6 +34531,7 @@
 	patches.suse/mailbox-zynqmp-ipi-Remove-redundant-mbox_controller_.patch
 	patches.suse/mailbox-zynqmp-ipi-Remove-dev.parent-check-in-zynqmp.patch
 	patches.suse/mailbox-zynqmp-ipi-Fix-out-of-bounds-access-in-mailb.patch
+	patches.suse/net-usb-asix-hold-PM-usage-ref-to-avoid-PM-MDIO-RTNL.patch
 
 	########################################################
 	# end of sorted patches
