net: usb: asix: hold PM usage ref to avoid PM/MDIO + RTNL deadlock (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12393,6 +12393,7 @@
 	patches.suse/mailbox-zynqmp-ipi-Fix-out-of-bounds-access-in-mailb.patch
 	patches.suse/mailbox-zynqmp-ipi-Fix-SGI-cleanup-on-unbind.patch
 	patches.suse/mailbox-mtk-cmdq-Remove-pm_runtime-APIs-from-cmdq_mb.patch
+	patches.suse/net-usb-asix-hold-PM-usage-ref-to-avoid-PM-MDIO-RTNL.patch
 
 	########################################################
 	# end of sorted patches
