KVM: SEV: Validate XCR0 provided by guest in GHCB (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34521,6 +34521,7 @@
 	patches.suse/ACPI-NFIT-Fix-incorrect-ndr_desc-being-reportedin-de.patch
 	patches.suse/KVM-SEV-Rename-kvm_ghcb_get_sw_exit_code-to-kvm_get_.patch
 	patches.suse/KVM-SEV-Read-save-fields-from-GHCB-exactly-once.patch
+	patches.suse/KVM-SEV-Validate-XCR0-provided-by-guest-in-GHCB.patch
 	patches.suse/clk-tegra-do-not-overallocate-memory-for-bpmp-clocks.patch
 	patches.suse/clk-mediatek-mt8195-infra_ao-Fix-parent-for-infra_ao.patch
 	patches.suse/clk-mediatek-clk-mux-Do-not-pass-flags-to-clk_mux_de.patch
