--- a/series.conf
+++ b/series.conf
@@ -6747,6 +6747,7 @@
 	patches.suse/x86-ibt-Optimize-the-fineibt-bhi-arity-1-case.patch
 	patches.suse/x86-percpu-Disable-named-address-spaces-for-UBSAN_BOOL-wit.patch
 	patches.suse/x86-smp-Allow-calling-mwait_play_dead-with-an-arbitrary-hi.patch
+	patches.suse/ACPI-processor_idle-Add-FFH-state-handling.patch
 	patches.suse/x86-kaslr-Reduce-KASLR-entropy-on-most-x86-systems.patch
 	patches.suse/x86-cpufeatures-Rename-X86_CMPXCHG64-to-X86_CX8.patch
 	patches.suse/x86-speculation-Simplify-and-make-CALL_NOSPEC-consistent.patch
