intel_idle: Use subsys_initcall_sync() for initialization (jsc#PED-13815).

--- a/series.conf
+++ b/series.conf
@@ -10259,6 +10259,7 @@
 	patches.suse/regulator-max20086-Fix-refcount-leak-in-max20086_par.patch
 	patches.suse/spi-omap2-mcspi-Disable-multi-mode-when-CS-should-be.patch
 	patches.suse/spi-omap2-mcspi-Disable-multi-mode-when-the-previous.patch
+	patches.suse/intel_idle-Use-subsys_initcall_sync-for-initialization.patch
 	patches.suse/ACPI-CPPC-Fix-NULL-pointer-dereference-when-nosmp-is.patch
 	patches.suse/drm-meson-fix-debug-log-statement-when-setting-the-H.patch
 	patches.suse/drm-meson-use-vclk_freq-instead-of-pixel_freq-in-deb.patch
