--- a/series.conf
+++ b/series.conf
@@ -10262,6 +10262,7 @@
 	patches.suse/intel_idle-Use-subsys_initcall_sync-for-initialization.patch
 	patches.suse/x86-smp-PM-hibernate-Split-arch_resume_nosmt.patch
 	patches.suse/intel_idle-Rescan-dead-SMT-siblings-during-initialization.patch
+	patches.suse/ACPI-processor-Rescan-dead-SMT-siblings-during-initializat.patch
 	patches.suse/ACPI-CPPC-Fix-NULL-pointer-dereference-when-nosmp-is.patch
 	patches.suse/drm-meson-fix-debug-log-statement-when-setting-the-H.patch
 	patches.suse/drm-meson-use-vclk_freq-instead-of-pixel_freq-in-deb.patch
