--- a/series.conf
+++ b/series.conf
@@ -10263,6 +10263,7 @@
 	patches.suse/x86-smp-PM-hibernate-Split-arch_resume_nosmt.patch
 	patches.suse/intel_idle-Rescan-dead-SMT-siblings-during-initialization.patch
 	patches.suse/ACPI-processor-Rescan-dead-SMT-siblings-during-initializat.patch
+	patches.suse/Reapply-x86-smp-Eliminate-mwait_play_dead_cpuid_hint.patch
 	patches.suse/ACPI-CPPC-Fix-NULL-pointer-dereference-when-nosmp-is.patch
 	patches.suse/drm-meson-fix-debug-log-statement-when-setting-the-H.patch
 	patches.suse/drm-meson-use-vclk_freq-instead-of-pixel_freq-in-deb.patch
