drm/amd/display: add workaround flag to link to force FFE preset (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7615,6 +7615,7 @@
 	patches.suse/drm-amd-pm-Skip-P2S-load-for-SMU-v13.0.12.patch
 	patches.suse/drm-amdgpu-reset-psp-cmd-to-NULL-after-releasing-the.patch
 	patches.suse/drm-amd-display-Don-t-try-AUX-transactions-on-discon.patch
+	patches.suse/drm-amd-display-add-workaround-flag-to-link-to-force.patch
 	patches.suse/drm-amd-display-pass-calculated-dram_speed_mts-to-dm.patch
 	patches.suse/drm-amdgpu-Set-snoop-bit-for-SDMA-for-MI-series.patch
 	patches.suse/drm-amdkfd-fix-missing-L2-cache-info-in-topology.patch
