- KVM: SVM: Set RFLAGS.IF=1 in C code, to get VMRUN out of the   STI shadow (git-fixes). - Refresh   patches.suse/x86-bugs-Add-a-Transient-Scheduler-Attacks-mitigation.patch.

--- a/series.conf
+++ b/series.conf
@@ -31378,6 +31378,7 @@
 	patches.suse/NFS-fix-nfs_release_folio-to-not-deadlock-via-kcompa.patch
 	patches.suse/rapidio-fix-an-API-misues-when-rio_add_net-fails.patch
 	patches.suse/rapidio-add-check-for-rio_add_net-in-rio_scan_alloc_.patch
+	patches.suse/KVM-SVM-Set-RFLAGS.IF-1-in-C-code-to-get-VMRUN-out-o.patch
 	patches.suse/KVM-SVM-Drop-DEBUGCTL-5-2-from-guest-s-effective-val.patch
 	patches.suse/KVM-SVM-Suppress-DEBUGCTL.BTF-on-AMD.patch
 	patches.suse/KVM-x86-Explicitly-zero-EAX-and-EBX-when-PERFMON_V2-.patch
