--- a/series.conf
+++ b/series.conf
@@ -6749,6 +6749,7 @@
 	patches.suse/x86-smp-Allow-calling-mwait_play_dead-with-an-arbitrary-hi.patch
 	patches.suse/ACPI-processor_idle-Add-FFH-state-handling.patch
 	patches.suse/intel_idle-Provide-the-default-enter_dead-handler.patch
+	patches.suse/ACPI-processor_idle-Export-acpi_processor_ffh_play_dead.patch
 	patches.suse/x86-kaslr-Reduce-KASLR-entropy-on-most-x86-systems.patch
 	patches.suse/x86-cpufeatures-Rename-X86_CMPXCHG64-to-X86_CX8.patch
 	patches.suse/x86-speculation-Simplify-and-make-CALL_NOSPEC-consistent.patch
