x86/topology: Implement topology_is_core_online() to address SMT regression (jsc#PED-13815).

--- a/series.conf
+++ b/series.conf
@@ -12135,6 +12135,7 @@
 	patches.suse/drm-panthor-Defer-scheduler-entitiy-destruction-to-q.patch
 	patches.suse/gpiolib-Extend-software-node-support-to-support-seco.patch
 	patches.suse/platform-x86-lg-laptop-Fix-WMAB-call-in-fan_mode_sto.patch
+	patches.suse/x86-topology-Implement-topology_is_core_online-to-address-.patch
 	patches.suse/fs-proc-task_mmu-check-p-vec_buf-for-NULL.patch
 	patches.suse/i2c-riic-Allow-setting-frequencies-lower-than-50KHz.patch
 	patches.suse/writeback-Avoid-contention-on-wb-list_lock-when-swit.patch
