blacklist.conf: blacklist 5a2a5b65d5d6

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1151,3 +1151,4 @@ d613f53c83ec47089c4e25859d5e8e0359f6f8da # CVE-2025-39883 https://bugzilla.suse.
 6deeefb820d0efb0b36753622fb982d03b37b3ad # amdgpu: causing s2idle regression (bsc#1243112)
 3b3b84aacb4420226576c9732e7b539ca7b79633 # causes kernel panic with BPF selftests, fix is difficult to backport, see bsc#1250574
 82a0302e7167d0b7c6cde56613db3748f8dd806d # comment only
+5a2a5b65d5d67279be9e1f0e4b9baf39ee594cb1 # Fix is actually b5eeb8365d196c95dbb0fd0a5b5a69a44832f16f. Unreproduced bug on custom ARM
