--- a/series.conf
+++ b/series.conf
@@ -34536,6 +34536,7 @@
 	patches.suse/crypto-essiv-Check-ssize-for-decryption-and-in-place.patch
 	patches.suse/gpio-wcd934x-mark-the-GPIO-controller-as-sleeping.patch
 	patches.suse/fbdev-Fix-logic-error-in-offb-name-match.patch
+	patches.suse/ASoC-SOF-ipc3-topology-Fix-multi-core-and-static-pip.patch
 
 	########################################################
 	# end of sorted patches
