drm/vmwgfx: Fix Use-after-free in validation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34539,6 +34539,7 @@
 	patches.suse/ASoC-SOF-ipc3-topology-Fix-multi-core-and-static-pip.patch
 	patches.suse/ASoC-SOF-ipc4-topology-Correct-the-minimum-host-DMA-.patch
 	patches.suse/drm-vmwgfx-Fix-a-null-ptr-access-in-the-cursor-snoop.patch
+	patches.suse/drm-vmwgfx-Fix-Use-after-free-in-validation.patch
 
 	########################################################
 	# end of sorted patches
