drm/vmwgfx: Fix copy-paste typo in validation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34540,6 +34540,7 @@
 	patches.suse/ASoC-SOF-ipc4-topology-Correct-the-minimum-host-DMA-.patch
 	patches.suse/drm-vmwgfx-Fix-a-null-ptr-access-in-the-cursor-snoop.patch
 	patches.suse/drm-vmwgfx-Fix-Use-after-free-in-validation.patch
+	patches.suse/drm-vmwgfx-Fix-copy-paste-typo-in-validation.patch
 
 	########################################################
 	# end of sorted patches
