--- a/series.conf
+++ b/series.conf
@@ -34543,6 +34543,7 @@
 	patches.suse/drm-vmwgfx-Fix-copy-paste-typo-in-validation.patch
 	patches.suse/drm-nouveau-fix-bad-ret-code-in-nouveau_bo_move_prep.patch
 	patches.suse/drm-amdgpu-Add-additional-DCE6-SCL-registers.patch
+	patches.suse/drm-amd-display-Add-missing-DCE6-SCL_HORZ_FILTER_INI.patch
 
 	########################################################
 	# end of sorted patches
