fbdev: Fix logic error in "offb" name match (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34535,6 +34535,7 @@
 	patches.suse/tpm_tis-Fix-incorrect-arguments-in-tpm_tis_probe_irq.patch
 	patches.suse/crypto-essiv-Check-ssize-for-decryption-and-in-place.patch
 	patches.suse/gpio-wcd934x-mark-the-GPIO-controller-as-sleeping.patch
+	patches.suse/fbdev-Fix-logic-error-in-offb-name-match.patch
 
 	########################################################
 	# end of sorted patches
