drm/amd/display: Properly clear SCL_*_FILTER_CONTROL on DCE6 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34544,6 +34544,7 @@
 	patches.suse/drm-nouveau-fix-bad-ret-code-in-nouveau_bo_move_prep.patch
 	patches.suse/drm-amdgpu-Add-additional-DCE6-SCL-registers.patch
 	patches.suse/drm-amd-display-Add-missing-DCE6-SCL_HORZ_FILTER_INI.patch
+	patches.suse/drm-amd-display-Properly-clear-SCL_-_FILTER_CONTROL-.patch
 
 	########################################################
 	# end of sorted patches
