--- a/series.conf
+++ b/series.conf
@@ -34533,6 +34533,7 @@
 	patches.suse/mailbox-zynqmp-ipi-Fix-out-of-bounds-access-in-mailb.patch
 	patches.suse/net-usb-asix-hold-PM-usage-ref-to-avoid-PM-MDIO-RTNL.patch
 	patches.suse/tpm_tis-Fix-incorrect-arguments-in-tpm_tis_probe_irq.patch
+	patches.suse/crypto-essiv-Check-ssize-for-decryption-and-in-place.patch
 
 	########################################################
 	# end of sorted patches
