tpm_tis: Fix incorrect arguments in tpm_tis_probe_irq_single (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34532,6 +34532,7 @@
 	patches.suse/mailbox-zynqmp-ipi-Remove-dev.parent-check-in-zynqmp.patch
 	patches.suse/mailbox-zynqmp-ipi-Fix-out-of-bounds-access-in-mailb.patch
 	patches.suse/net-usb-asix-hold-PM-usage-ref-to-avoid-PM-MDIO-RTNL.patch
+	patches.suse/tpm_tis-Fix-incorrect-arguments-in-tpm_tis_probe_irq.patch
 
 	########################################################
 	# end of sorted patches
