--- a/series.conf
+++ b/series.conf
@@ -34542,6 +34542,7 @@
 	patches.suse/drm-vmwgfx-Fix-Use-after-free-in-validation.patch
 	patches.suse/drm-vmwgfx-Fix-copy-paste-typo-in-validation.patch
 	patches.suse/drm-nouveau-fix-bad-ret-code-in-nouveau_bo_move_prep.patch
+	patches.suse/drm-amdgpu-Add-additional-DCE6-SCL-registers.patch
 
 	########################################################
 	# end of sorted patches
