--- a/series.conf
+++ b/series.conf
@@ -34541,6 +34541,7 @@
 	patches.suse/drm-vmwgfx-Fix-a-null-ptr-access-in-the-cursor-snoop.patch
 	patches.suse/drm-vmwgfx-Fix-Use-after-free-in-validation.patch
 	patches.suse/drm-vmwgfx-Fix-copy-paste-typo-in-validation.patch
+	patches.suse/drm-nouveau-fix-bad-ret-code-in-nouveau_bo_move_prep.patch
 
 	########################################################
 	# end of sorted patches
