gpio: wcd934x: mark the GPIO controller as sleeping (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34534,6 +34534,7 @@
 	patches.suse/net-usb-asix-hold-PM-usage-ref-to-avoid-PM-MDIO-RTNL.patch
 	patches.suse/tpm_tis-Fix-incorrect-arguments-in-tpm_tis_probe_irq.patch
 	patches.suse/crypto-essiv-Check-ssize-for-decryption-and-in-place.patch
+	patches.suse/gpio-wcd934x-mark-the-GPIO-controller-as-sleeping.patch
 
 	########################################################
 	# end of sorted patches
