--- a/series.conf
+++ b/series.conf
@@ -55774,6 +55774,7 @@
 	patches.suse/fbdev-simplefb-Fix-use-after-free-in-simplefb_detach.patch
 	patches.suse/ASoC-SOF-ipc4-topology-Account-for-different-ChainDM.patch
 	patches.suse/ASoC-SOF-Intel-hda-pcm-Place-the-constraint-on-perio.patch
+	patches.suse/ASoC-SOF-Intel-Read-the-LLP-via-the-associated-Link-.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
