--- a/series.conf
+++ b/series.conf
@@ -55775,6 +55775,7 @@
 	patches.suse/ASoC-SOF-ipc4-topology-Account-for-different-ChainDM.patch
 	patches.suse/ASoC-SOF-Intel-hda-pcm-Place-the-constraint-on-perio.patch
 	patches.suse/ASoC-SOF-Intel-Read-the-LLP-via-the-associated-Link-.patch
+	patches.suse/drm-xe-uapi-loosen-used-tracking-restriction.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
