--- a/series.conf
+++ b/series.conf
@@ -55772,6 +55772,7 @@
 	patches.suse/mailbox-zynqmp-ipi-Remove-dev.parent-check-in-zynqmp.patch
 	patches.suse/mailbox-zynqmp-ipi-Fix-out-of-bounds-access-in-mailb.patch
 	patches.suse/fbdev-simplefb-Fix-use-after-free-in-simplefb_detach.patch
+	patches.suse/ASoC-SOF-ipc4-topology-Account-for-different-ChainDM.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
