--- a/series.conf
+++ b/series.conf
@@ -55771,6 +55771,7 @@
 	patches.suse/mailbox-zynqmp-ipi-Remove-redundant-mbox_controller_.patch
 	patches.suse/mailbox-zynqmp-ipi-Remove-dev.parent-check-in-zynqmp.patch
 	patches.suse/mailbox-zynqmp-ipi-Fix-out-of-bounds-access-in-mailb.patch
+	patches.suse/fbdev-simplefb-Fix-use-after-free-in-simplefb_detach.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
