--- a/series.conf
+++ b/series.conf
@@ -12406,6 +12406,7 @@
 	patches.suse/ASoC-SOF-ipc4-topology-Account-for-different-ChainDM.patch
 	patches.suse/ASoC-SOF-Intel-hda-pcm-Place-the-constraint-on-perio.patch
 	patches.suse/ASoC-SOF-Intel-Read-the-LLP-via-the-associated-Link-.patch
+	patches.suse/of-unittest-Fix-device-reference-count-leak-in-of_un.patch
 
 	########################################################
 	# end of sorted patches
