drm/xe/hw_engine_group: Fix double write lock release in error path (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12412,6 +12412,7 @@
 	patches.suse/drm-vmwgfx-Fix-copy-paste-typo-in-validation.patch
 	patches.suse/drm-nouveau-fix-bad-ret-code-in-nouveau_bo_move_prep.patch
 	patches.suse/drm-xe-uapi-loosen-used-tracking-restriction.patch
+	patches.suse/drm-xe-hw_engine_group-Fix-double-write-lock-release.patch
 
 	########################################################
 	# end of sorted patches
