drm/vmwgfx: Fix copy-paste typo in validation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12409,6 +12409,7 @@
 	patches.suse/of-unittest-Fix-device-reference-count-leak-in-of_un.patch
 	patches.suse/drm-vmwgfx-Fix-a-null-ptr-access-in-the-cursor-snoop.patch
 	patches.suse/drm-vmwgfx-Fix-Use-after-free-in-validation.patch
+	patches.suse/drm-vmwgfx-Fix-copy-paste-typo-in-validation.patch
 
 	########################################################
 	# end of sorted patches
