--- a/series.conf
+++ b/series.conf
@@ -12401,6 +12401,7 @@
 	patches.suse/gpio-wcd934x-mark-the-GPIO-controller-as-sleeping.patch
 	patches.suse/fbdev-simplefb-Fix-use-after-free-in-simplefb_detach.patch
 	patches.suse/fbdev-Fix-logic-error-in-offb-name-match.patch
+	patches.suse/ASoC-SOF-ipc3-topology-Fix-multi-core-and-static-pip.patch
 
 	########################################################
 	# end of sorted patches
