--- a/series.conf
+++ b/series.conf
@@ -12397,6 +12397,7 @@
 	patches.suse/mailbox-mtk-cmdq-Remove-pm_runtime-APIs-from-cmdq_mb.patch
 	patches.suse/net-usb-asix-hold-PM-usage-ref-to-avoid-PM-MDIO-RTNL.patch
 	patches.suse/tpm_tis-Fix-incorrect-arguments-in-tpm_tis_probe_irq.patch
+	patches.suse/crypto-essiv-Check-ssize-for-decryption-and-in-place.patch
 
 	########################################################
 	# end of sorted patches
