--- a/series.conf
+++ b/series.conf
@@ -12404,6 +12404,7 @@
 	patches.suse/ASoC-SOF-ipc3-topology-Fix-multi-core-and-static-pip.patch
 	patches.suse/ASoC-SOF-ipc4-topology-Correct-the-minimum-host-DMA-.patch
 	patches.suse/ASoC-SOF-ipc4-topology-Account-for-different-ChainDM.patch
+	patches.suse/ASoC-SOF-Intel-hda-pcm-Place-the-constraint-on-perio.patch
 
 	########################################################
 	# end of sorted patches
