--- a/series.conf
+++ b/series.conf
@@ -12405,6 +12405,7 @@
 	patches.suse/ASoC-SOF-ipc4-topology-Correct-the-minimum-host-DMA-.patch
 	patches.suse/ASoC-SOF-ipc4-topology-Account-for-different-ChainDM.patch
 	patches.suse/ASoC-SOF-Intel-hda-pcm-Place-the-constraint-on-perio.patch
+	patches.suse/ASoC-SOF-Intel-Read-the-LLP-via-the-associated-Link-.patch
 
 	########################################################
 	# end of sorted patches
