--- a/series.conf
+++ b/series.conf
@@ -12400,6 +12400,7 @@
 	patches.suse/crypto-essiv-Check-ssize-for-decryption-and-in-place.patch
 	patches.suse/gpio-wcd934x-mark-the-GPIO-controller-as-sleeping.patch
 	patches.suse/fbdev-simplefb-Fix-use-after-free-in-simplefb_detach.patch
+	patches.suse/fbdev-Fix-logic-error-in-offb-name-match.patch
 
 	########################################################
 	# end of sorted patches
