--- a/series.conf
+++ b/series.conf
@@ -12399,6 +12399,7 @@
 	patches.suse/tpm_tis-Fix-incorrect-arguments-in-tpm_tis_probe_irq.patch
 	patches.suse/crypto-essiv-Check-ssize-for-decryption-and-in-place.patch
 	patches.suse/gpio-wcd934x-mark-the-GPIO-controller-as-sleeping.patch
+	patches.suse/fbdev-simplefb-Fix-use-after-free-in-simplefb_detach.patch
 
 	########################################################
 	# end of sorted patches
