--- a/series.conf
+++ b/series.conf
@@ -12417,6 +12417,7 @@
 	patches.suse/drm-amd-display-Add-missing-DCE6-SCL_HORZ_FILTER_INI.patch
 	patches.suse/drm-amd-display-Properly-clear-SCL_-_FILTER_CONTROL-.patch
 	patches.suse/drm-amd-display-Properly-disable-scaling-on-DCE6.patch
+	patches.suse/drm-amd-display-Disable-scaling-on-DCE6-for-now.patch
 
 	########################################################
 	# end of sorted patches
