--- a/series.conf
+++ b/series.conf
@@ -12414,6 +12414,7 @@
 	patches.suse/drm-xe-uapi-loosen-used-tracking-restriction.patch
 	patches.suse/drm-xe-hw_engine_group-Fix-double-write-lock-release.patch
 	patches.suse/drm-amdgpu-Add-additional-DCE6-SCL-registers.patch
+	patches.suse/drm-amd-display-Add-missing-DCE6-SCL_HORZ_FILTER_INI.patch
 
 	########################################################
 	# end of sorted patches
