drm/amdgpu: Add additional DCE6 SCL registers (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12413,6 +12413,7 @@
 	patches.suse/drm-nouveau-fix-bad-ret-code-in-nouveau_bo_move_prep.patch
 	patches.suse/drm-xe-uapi-loosen-used-tracking-restriction.patch
 	patches.suse/drm-xe-hw_engine_group-Fix-double-write-lock-release.patch
+	patches.suse/drm-amdgpu-Add-additional-DCE6-SCL-registers.patch
 
 	########################################################
 	# end of sorted patches
