--- a/series.conf
+++ b/series.conf
@@ -12407,6 +12407,7 @@
 	patches.suse/ASoC-SOF-Intel-hda-pcm-Place-the-constraint-on-perio.patch
 	patches.suse/ASoC-SOF-Intel-Read-the-LLP-via-the-associated-Link-.patch
 	patches.suse/of-unittest-Fix-device-reference-count-leak-in-of_un.patch
+	patches.suse/drm-vmwgfx-Fix-a-null-ptr-access-in-the-cursor-snoop.patch
 
 	########################################################
 	# end of sorted patches
