drm/amd/display: Properly clear SCL_*_FILTER_CONTROL on DCE6 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12415,6 +12415,7 @@
 	patches.suse/drm-xe-hw_engine_group-Fix-double-write-lock-release.patch
 	patches.suse/drm-amdgpu-Add-additional-DCE6-SCL-registers.patch
 	patches.suse/drm-amd-display-Add-missing-DCE6-SCL_HORZ_FILTER_INI.patch
+	patches.suse/drm-amd-display-Properly-clear-SCL_-_FILTER_CONTROL-.patch
 
 	########################################################
 	# end of sorted patches
