drm/xe/uapi: loosen used tracking restriction (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12411,6 +12411,7 @@
 	patches.suse/drm-vmwgfx-Fix-Use-after-free-in-validation.patch
 	patches.suse/drm-vmwgfx-Fix-copy-paste-typo-in-validation.patch
 	patches.suse/drm-nouveau-fix-bad-ret-code-in-nouveau_bo_move_prep.patch
+	patches.suse/drm-xe-uapi-loosen-used-tracking-restriction.patch
 
 	########################################################
 	# end of sorted patches
