--- a/series.conf
+++ b/series.conf
@@ -12416,6 +12416,7 @@
 	patches.suse/drm-amdgpu-Add-additional-DCE6-SCL-registers.patch
 	patches.suse/drm-amd-display-Add-missing-DCE6-SCL_HORZ_FILTER_INI.patch
 	patches.suse/drm-amd-display-Properly-clear-SCL_-_FILTER_CONTROL-.patch
+	patches.suse/drm-amd-display-Properly-disable-scaling-on-DCE6.patch
 
 	########################################################
 	# end of sorted patches
