ASoC: SOF: ipc4-topology: Account for different ChainDMA host buffer size (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12403,6 +12403,7 @@
 	patches.suse/fbdev-Fix-logic-error-in-offb-name-match.patch
 	patches.suse/ASoC-SOF-ipc3-topology-Fix-multi-core-and-static-pip.patch
 	patches.suse/ASoC-SOF-ipc4-topology-Correct-the-minimum-host-DMA-.patch
+	patches.suse/ASoC-SOF-ipc4-topology-Account-for-different-ChainDM.patch
 
 	########################################################
 	# end of sorted patches
