rtc: x1205: Fix Xicor X1205 vendor prefix (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12418,6 +12418,7 @@
 	patches.suse/drm-amd-display-Properly-clear-SCL_-_FILTER_CONTROL-.patch
 	patches.suse/drm-amd-display-Properly-disable-scaling-on-DCE6.patch
 	patches.suse/drm-amd-display-Disable-scaling-on-DCE6-for-now.patch
+	patches.suse/rtc-x1205-Fix-Xicor-X1205-vendor-prefix.patch
 
 	########################################################
 	# end of sorted patches
