USB: serial: option: add SIMCom 8230C compositions (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10687,6 +10687,7 @@
 	patches.kernel.org/6.12.51-011-Linux-6.12.51.patch
 	patches.kernel.org/6.12.52-001-wifi-rtw89-fix-use-after-free-in-rtw89_core_t.patch
 	patches.kernel.org/6.12.52-002-media-i2c-tc358743-Fix-use-after-free-bugs-ca.patch
+	patches.kernel.org/6.12.52-003-USB-serial-option-add-SIMCom-8230C-compositio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
