serial: stm32: allow selecting console when the driver is module (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10712,6 +10712,7 @@
 	patches.kernel.org/6.12.52-025-hid-fix-I2C-read-buffer-overflow-in-raw_event.patch
 	patches.kernel.org/6.12.52-026-nvmem-layouts-fix-automatic-module-loading.patch
 	patches.kernel.org/6.12.52-027-binder-fix-double-free-in-dbitmap.patch
+	patches.kernel.org/6.12.52-028-serial-stm32-allow-selecting-console-when-the.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
