KVM: x86: Don't (re)check L1 intercepts when completing userspace I/O (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10719,6 +10719,7 @@
 	patches.kernel.org/6.12.52-032-driver-core-PM-Set-power.no_callbacks-along-w.patch
 	patches.kernel.org/6.12.52-033-crypto-rng-Ensure-set_ent-is-always-present.patch
 	patches.kernel.org/6.12.52-034-net-9p-fix-double-req-put-in-p9_fd_cancelled.patch
+	patches.kernel.org/6.12.52-035-KVM-x86-Don-t-re-check-L1-intercepts-when-com.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
