--- a/series.conf
+++ b/series.conf
@@ -10711,6 +10711,7 @@
 	patches.kernel.org/6.12.52-024-ALSA-usb-audio-fix-race-condition-to-UAF-in-s.patch
 	patches.kernel.org/6.12.52-025-hid-fix-I2C-read-buffer-overflow-in-raw_event.patch
 	patches.kernel.org/6.12.52-026-nvmem-layouts-fix-automatic-module-loading.patch
+	patches.kernel.org/6.12.52-027-binder-fix-double-free-in-dbitmap.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
