--- a/series.conf
+++ b/series.conf
@@ -10720,6 +10720,7 @@
 	patches.kernel.org/6.12.52-033-crypto-rng-Ensure-set_ent-is-always-present.patch
 	patches.kernel.org/6.12.52-034-net-9p-fix-double-req-put-in-p9_fd_cancelled.patch
 	patches.kernel.org/6.12.52-035-KVM-x86-Don-t-re-check-L1-intercepts-when-com.patch
+	patches.kernel.org/6.12.52-036-Linux-6.12.52.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
