staging: axis-fifo: fix TX handling on copy_from_user() failure (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10714,6 +10714,7 @@
 	patches.kernel.org/6.12.52-027-binder-fix-double-free-in-dbitmap.patch
 	patches.kernel.org/6.12.52-028-serial-stm32-allow-selecting-console-when-the.patch
 	patches.kernel.org/6.12.52-029-staging-axis-fifo-fix-maximum-TX-packet-lengt.patch
+	patches.kernel.org/6.12.52-030-staging-axis-fifo-fix-TX-handling-on-copy_fro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
