--- a/series.conf
+++ b/series.conf
@@ -10697,6 +10697,7 @@
 	patches.kernel.org/6.12.52-010-platform-x86-amd-pmc-Add-MECHREVO-Yilong15Pro.patch
 	patches.kernel.org/6.12.52-011-perf-subcmd-avoid-crash-in-exclude_cmds-when-.patch
 	patches.kernel.org/6.12.52-012-platform-x86-amd-pmf-Support-new-ACPI-ID-AMDI.patch
+	patches.kernel.org/6.12.52-013-ASoC-rt5682s-Adjust-SAR-ADC-button-mode-to-fi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
