--- a/series.conf
+++ b/series.conf
@@ -10694,6 +10694,7 @@
 	patches.kernel.org/6.12.52-007-rust-block-fix-srctree-links.patch
 	patches.kernel.org/6.12.52-008-ASoC-amd-acp-Adjust-pdm-gain-value.patch
 	patches.kernel.org/6.12.52-009-dm-integrity-limit-MAX_TAG_SIZE-to-255.patch
+	patches.kernel.org/6.12.52-010-platform-x86-amd-pmc-Add-MECHREVO-Yilong15Pro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
