netfs: Prevent duplicate unlocking (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10699,6 +10699,7 @@
 	patches.kernel.org/6.12.52-012-platform-x86-amd-pmf-Support-new-ACPI-ID-AMDI.patch
 	patches.kernel.org/6.12.52-013-ASoC-rt5682s-Adjust-SAR-ADC-button-mode-to-fi.patch
 	patches.kernel.org/6.12.52-014-btrfs-ref-verify-handle-damaged-extent-root-t.patch
+	patches.kernel.org/6.12.52-015-netfs-Prevent-duplicate-unlocking.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
