--- a/series.conf
+++ b/series.conf
@@ -10701,6 +10701,7 @@
 	patches.kernel.org/6.12.52-014-btrfs-ref-verify-handle-damaged-extent-root-t.patch
 	patches.kernel.org/6.12.52-015-netfs-Prevent-duplicate-unlocking.patch
 	patches.kernel.org/6.12.52-016-can-hi311x-fix-null-pointer-dereference-when-.patch
+	patches.kernel.org/6.12.52-017-can-rcar_canfd-Fix-controller-mode-setting.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
