media: i2c: tc358743: Fix use-after-free bugs caused by orphan timer in probe (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10686,6 +10686,7 @@
 	patches.kernel.org/6.12.51-010-ASoC-qcom-audioreach-fix-potential-null-point.patch
 	patches.kernel.org/6.12.51-011-Linux-6.12.51.patch
 	patches.kernel.org/6.12.52-001-wifi-rtw89-fix-use-after-free-in-rtw89_core_t.patch
+	patches.kernel.org/6.12.52-002-media-i2c-tc358743-Fix-use-after-free-bugs-ca.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
