--- a/series.conf
+++ b/series.conf
@@ -10718,6 +10718,7 @@
 	patches.kernel.org/6.12.52-031-staging-axis-fifo-flush-RX-FIFO-on-read-error.patch
 	patches.kernel.org/6.12.52-032-driver-core-PM-Set-power.no_callbacks-along-w.patch
 	patches.kernel.org/6.12.52-033-crypto-rng-Ensure-set_ent-is-always-present.patch
+	patches.kernel.org/6.12.52-034-net-9p-fix-double-req-put-in-p9_fd_cancelled.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
