wifi: rtlwifi: rtl8192cu: Don't claim USB ID 07b8:8188 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10689,6 +10689,7 @@
 	patches.kernel.org/6.12.52-002-media-i2c-tc358743-Fix-use-after-free-bugs-ca.patch
 	patches.kernel.org/6.12.52-003-USB-serial-option-add-SIMCom-8230C-compositio.patch
 	patches.kernel.org/6.12.52-004-Bluetooth-btusb-Add-USB-ID-2001-332a-for-D-Li.patch
+	patches.kernel.org/6.12.52-005-wifi-rtlwifi-rtl8192cu-Don-t-claim-USB-ID-07b.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
