--- a/series.conf
+++ b/series.conf
@@ -10715,6 +10715,7 @@
 	patches.kernel.org/6.12.52-028-serial-stm32-allow-selecting-console-when-the.patch
 	patches.kernel.org/6.12.52-029-staging-axis-fifo-fix-maximum-TX-packet-lengt.patch
 	patches.kernel.org/6.12.52-030-staging-axis-fifo-fix-TX-handling-on-copy_fro.patch
+	patches.kernel.org/6.12.52-031-staging-axis-fifo-flush-RX-FIFO-on-read-error.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
