--- a/series.conf
+++ b/series.conf
@@ -10700,6 +10700,7 @@
 	patches.kernel.org/6.12.52-013-ASoC-rt5682s-Adjust-SAR-ADC-button-mode-to-fi.patch
 	patches.kernel.org/6.12.52-014-btrfs-ref-verify-handle-damaged-extent-root-t.patch
 	patches.kernel.org/6.12.52-015-netfs-Prevent-duplicate-unlocking.patch
+	patches.kernel.org/6.12.52-016-can-hi311x-fix-null-pointer-dereference-when-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
