--- a/series.conf
+++ b/series.conf
@@ -10690,6 +10690,7 @@
 	patches.kernel.org/6.12.52-003-USB-serial-option-add-SIMCom-8230C-compositio.patch
 	patches.kernel.org/6.12.52-004-Bluetooth-btusb-Add-USB-ID-2001-332a-for-D-Li.patch
 	patches.kernel.org/6.12.52-005-wifi-rtlwifi-rtl8192cu-Don-t-claim-USB-ID-07b.patch
+	patches.kernel.org/6.12.52-006-wifi-rtl8xxxu-Don-t-claim-USB-ID-07b8-8188.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
