--- a/series.conf
+++ b/series.conf
@@ -10707,6 +10707,7 @@
 	patches.kernel.org/6.12.52-020-drm-amd-include-MES-v11-and-v12-API-header-up.patch
 	patches.kernel.org/6.12.52-021-drm-amd-include-Update-MES-v12-API-for-fence-.patch
 	patches.kernel.org/6.12.52-022-drm-amdgpu-Enable-MES-lr_compute_wa-by-defaul.patch
+	patches.kernel.org/6.12.52-023-ALSA-usb-audio-Kill-timer-properly-at-removal.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
