wifi: rtw89: fix use-after-free in rtw89_core_tx_kick_off_and_wait() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10685,6 +10685,7 @@
 	patches.kernel.org/6.12.51-009-wifi-ath11k-fix-NULL-dereference-in-ath11k_qm.patch
 	patches.kernel.org/6.12.51-010-ASoC-qcom-audioreach-fix-potential-null-point.patch
 	patches.kernel.org/6.12.51-011-Linux-6.12.51.patch
+	patches.kernel.org/6.12.52-001-wifi-rtw89-fix-use-after-free-in-rtw89_core_t.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
