--- a/series.conf
+++ b/series.conf
@@ -10717,6 +10717,7 @@
 	patches.kernel.org/6.12.52-030-staging-axis-fifo-fix-TX-handling-on-copy_fro.patch
 	patches.kernel.org/6.12.52-031-staging-axis-fifo-flush-RX-FIFO-on-read-error.patch
 	patches.kernel.org/6.12.52-032-driver-core-PM-Set-power.no_callbacks-along-w.patch
+	patches.kernel.org/6.12.52-033-crypto-rng-Ensure-set_ent-is-always-present.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
