drm/amd : Update MES API header file for v11 & v12 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10703,6 +10703,7 @@
 	patches.kernel.org/6.12.52-016-can-hi311x-fix-null-pointer-dereference-when-.patch
 	patches.kernel.org/6.12.52-017-can-rcar_canfd-Fix-controller-mode-setting.patch
 	patches.kernel.org/6.12.52-018-platform-x86-amd-pmc-Add-Stellaris-Slim-Gen6-.patch
+	patches.kernel.org/6.12.52-019-drm-amd-Update-MES-API-header-file-for-v11-v1.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
