perf subcmd: avoid crash in exclude_cmds when excludes is empty (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10695,6 +10695,7 @@
 	patches.kernel.org/6.12.52-008-ASoC-amd-acp-Adjust-pdm-gain-value.patch
 	patches.kernel.org/6.12.52-009-dm-integrity-limit-MAX_TAG_SIZE-to-255.patch
 	patches.kernel.org/6.12.52-010-platform-x86-amd-pmc-Add-MECHREVO-Yilong15Pro.patch
+	patches.kernel.org/6.12.52-011-perf-subcmd-avoid-crash-in-exclude_cmds-when-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
