drm/amd/include : Update MES v12 API for fence update (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10705,6 +10705,7 @@
 	patches.kernel.org/6.12.52-018-platform-x86-amd-pmc-Add-Stellaris-Slim-Gen6-.patch
 	patches.kernel.org/6.12.52-019-drm-amd-Update-MES-API-header-file-for-v11-v1.patch
 	patches.kernel.org/6.12.52-020-drm-amd-include-MES-v11-and-v12-API-header-up.patch
+	patches.kernel.org/6.12.52-021-drm-amd-include-Update-MES-v12-API-for-fence-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
