dm-integrity: limit MAX_TAG_SIZE to 255 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10693,6 +10693,7 @@
 	patches.kernel.org/6.12.52-006-wifi-rtl8xxxu-Don-t-claim-USB-ID-07b8-8188.patch
 	patches.kernel.org/6.12.52-007-rust-block-fix-srctree-links.patch
 	patches.kernel.org/6.12.52-008-ASoC-amd-acp-Adjust-pdm-gain-value.patch
+	patches.kernel.org/6.12.52-009-dm-integrity-limit-MAX_TAG_SIZE-to-255.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
