platform/x86/amd/pmc: Add Stellaris Slim Gen6 AMD to spurious 8042 quirks list (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10702,6 +10702,7 @@
 	patches.kernel.org/6.12.52-015-netfs-Prevent-duplicate-unlocking.patch
 	patches.kernel.org/6.12.52-016-can-hi311x-fix-null-pointer-dereference-when-.patch
 	patches.kernel.org/6.12.52-017-can-rcar_canfd-Fix-controller-mode-setting.patch
+	patches.kernel.org/6.12.52-018-platform-x86-amd-pmc-Add-Stellaris-Slim-Gen6-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
