--- a/series.conf
+++ b/series.conf
@@ -10704,6 +10704,7 @@
 	patches.kernel.org/6.12.52-017-can-rcar_canfd-Fix-controller-mode-setting.patch
 	patches.kernel.org/6.12.52-018-platform-x86-amd-pmc-Add-Stellaris-Slim-Gen6-.patch
 	patches.kernel.org/6.12.52-019-drm-amd-Update-MES-API-header-file-for-v11-v1.patch
+	patches.kernel.org/6.12.52-020-drm-amd-include-MES-v11-and-v12-API-header-up.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
