nvmem: layouts: fix automatic module loading (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10710,6 +10710,7 @@
 	patches.kernel.org/6.12.52-023-ALSA-usb-audio-Kill-timer-properly-at-removal.patch
 	patches.kernel.org/6.12.52-024-ALSA-usb-audio-fix-race-condition-to-UAF-in-s.patch
 	patches.kernel.org/6.12.52-025-hid-fix-I2C-read-buffer-overflow-in-raw_event.patch
+	patches.kernel.org/6.12.52-026-nvmem-layouts-fix-automatic-module-loading.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
