driver core/PM: Set power.no_callbacks along with power.no_pm (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10716,6 +10716,7 @@
 	patches.kernel.org/6.12.52-029-staging-axis-fifo-fix-maximum-TX-packet-lengt.patch
 	patches.kernel.org/6.12.52-030-staging-axis-fifo-fix-TX-handling-on-copy_fro.patch
 	patches.kernel.org/6.12.52-031-staging-axis-fifo-flush-RX-FIFO-on-read-error.patch
+	patches.kernel.org/6.12.52-032-driver-core-PM-Set-power.no_callbacks-along-w.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
