--- a/series.conf
+++ b/series.conf
@@ -43,6 +43,33 @@
 	patches.kernel.org/6.17.1-014-media-stm32-csi-Fix-dereference-before-NULL-ch.patch
 	patches.kernel.org/6.17.1-015-ASoC-qcom-audioreach-fix-potential-null-pointe.patch
 	patches.kernel.org/6.17.1-016-Linux-6.17.1.patch
+	patches.kernel.org/6.17.2-001-drm-amdgpu-Enable-MES-lr_compute_wa-by-default.patch
+	patches.kernel.org/6.17.2-002-USB-serial-option-add-SIMCom-8230C-composition.patch
+	patches.kernel.org/6.17.2-003-Bluetooth-btusb-Add-USB-ID-2001-332a-for-D-Lin.patch
+	patches.kernel.org/6.17.2-004-wifi-rtlwifi-rtl8192cu-Don-t-claim-USB-ID-07b8.patch
+	patches.kernel.org/6.17.2-005-wifi-rtl8xxxu-Don-t-claim-USB-ID-07b8-8188.patch
+	patches.kernel.org/6.17.2-006-rust-drm-fix-srctree-links.patch
+	patches.kernel.org/6.17.2-007-rust-block-fix-srctree-links.patch
+	patches.kernel.org/6.17.2-008-rust-pci-fix-incorrect-platform-reference-in-P.patch
+	patches.kernel.org/6.17.2-009-rust-pci-fix-incorrect-platform-reference-in-P.patch
+	patches.kernel.org/6.17.2-010-serial-qcom-geni-Fix-blocked-task.patch
+	patches.kernel.org/6.17.2-011-nvmem-layouts-fix-automatic-module-loading.patch
+	patches.kernel.org/6.17.2-012-drivers-misc-amd-sbi-Kconfig-select-REGMAP_I2C.patch
+	patches.kernel.org/6.17.2-013-binder-fix-double-free-in-dbitmap.patch
+	patches.kernel.org/6.17.2-014-serial-stm32-allow-selecting-console-when-the-.patch
+	patches.kernel.org/6.17.2-015-staging-axis-fifo-fix-maximum-TX-packet-length.patch
+	patches.kernel.org/6.17.2-016-staging-axis-fifo-fix-TX-handling-on-copy_from.patch
+	patches.kernel.org/6.17.2-017-staging-axis-fifo-flush-RX-FIFO-on-read-errors.patch
+	patches.kernel.org/6.17.2-018-driver-core-faux-Set-power.no_pm-for-faux-devi.patch
+	patches.kernel.org/6.17.2-019-driver-core-PM-Set-power.no_callbacks-along-wi.patch
+	patches.kernel.org/6.17.2-020-Revert-crypto-testmgr-desupport-SHA-1-for-FIPS.patch
+	patches.kernel.org/6.17.2-021-crypto-zstd-Fix-compression-bug-caused-by-trun.patch
+	patches.kernel.org/6.17.2-022-crypto-rng-Ensure-set_ent-is-always-present.patch
+	patches.kernel.org/6.17.2-023-net-9p-fix-double-req-put-in-p9_fd_cancelled.patch
+	patches.kernel.org/6.17.2-024-KVM-x86-Don-t-re-check-L1-intercepts-when-comp.patch
+	patches.kernel.org/6.17.2-025-f2fs-fix-to-do-sanity-check-on-node-footer-for.patch
+	patches.kernel.org/6.17.2-026-ring-buffer-Propagate-__rb_map_vma-return-valu.patch
+	patches.kernel.org/6.17.2-027-Linux-6.17.2.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
@@ -78,7 +105,6 @@
 	patches.suse/clk-rp1-Implement-remaining-clock-tree.patch
 	patches.suse/net-cadence-macb-Add-support-for-Raspberry-Pi-RP1-et.patch
 	patches.suse/docs-kdoc-handle-the-obsolescensce-of-docutils.Error.patch
-	patches.suse/Revert-crypto-testmgr-desupport-SHA-1-for-FIPS-140.patch
 
 	########################################################
 	# end of sorted patches
