--- a/series.conf
+++ b/series.conf
@@ -34384,6 +34384,7 @@
 	patches.suse/Bluetooth-MGMT-Fix-possible-UAFs.patch
 	patches.suse/xfrm-xfrm_alloc_spi-shouldn-t-use-0-as-SPI.patch
 	patches.suse/can-hi311x-fix-null-pointer-dereference-when-resumin.patch
+	patches.suse/can-rcar_canfd-Fix-controller-mode-setting.patch
 	patches.suse/can-etas_es58x-populate-ndo_change_mtu-to-prevent-bu.patch
 	patches.suse/can-hi311x-populate-ndo_change_mtu-to-prevent-buffer.patch
 	patches.suse/can-sun4i_can-populate-ndo_change_mtu-to-prevent-buf.patch
