media: tunner: xc5000: Refactor firmware load (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -25295,6 +25295,7 @@
 	patches.suse/media-v4l2-subdev-Fix-stream-handling-for-crop-API.patch
 	patches.suse/media-atomisp-ssh_css-Fix-a-null-pointer-dereference.patch
 	patches.suse/media-dvb-as102-fe-Fix-as10x_register_addr-packing.patch
+	patches.suse/media-tunner-xc5000-Refactor-firmware-load.patch
 	patches.suse/media-dvb-usb-dib0700_devices-Add-missing-release_fi.patch
 	patches.suse/media-mc-mark-the-media-devnode-as-registered-from-t.patch
 	patches.suse/media-v4l-Don-t-turn-on-privacy-LED-if-streamon-fail.patch
