driver core/PM: Set power.no_callbacks along with power.no_pm (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34402,6 +34402,7 @@
 	patches.suse/writeback-Avoid-excessively-long-inode-switching-tim.patch
 	patches.suse/seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-the-tr.patch
 	patches.suse/EDAC-i10nm-Skip-DIMM-enumeration-on-a-disabled-memor.patch
+	patches.suse/driver-core-PM-Set-power.no_callbacks-along-with-pow.patch
 	patches.suse/hwmon-mlxreg-fan-Separate-methods-of-fan-setting-com.patch
 	patches.suse/pwm-berlin-Fix-wrong-register-in-suspend-resume.patch
 	patches.suse/pwm-tiehrpwm-Make-code-comment-in-.free-more-useful.patch
