--- a/series.conf
+++ b/series.conf
@@ -52575,6 +52575,7 @@
 	patches.suse/drm-amdkfd-fix-missing-L2-cache-info-in-topology.patch
 	patches.suse/drm-amdgpu-mes11-fix-set_hw_resources_1-calculation.patch
 	patches.suse/drm-amdgpu-Unlocked-unmap-only-clear-page-table-leav.patch
+	patches.suse/drm-amd-include-Update-MES-v12-API-for-fence-update.patch
 	patches.suse/drm-amdgpu-refine-smu-send-msg-debug-log-format.patch
 	patches.suse/drm-amdgpu-umsch-declare-umsch-firmware.patch
 	patches.suse/drm-amdgpu-umsch-fix-ucode-check.patch
