drm/amd : Update MES API header file for v11 & v12 (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -49483,6 +49483,7 @@
 	patches.suse/drm-amdgpu-fix-ACA-bank-count-boundary-check-error.patch
 	patches.suse/drm-amdgpu-Fix-map-unmap-queue-logic.patch
 	patches.suse/drm-amdkfd-Fix-wrong-usage-of-INIT_WORK.patch
+	patches.suse/drm-amd-Update-MES-API-header-file-for-v11-v12.patch
 	patches.suse/Revert-drm-amd-display-parse-umc_info-or-vram_info-b.patch
 	patches.suse/x86-tdx-Introduce-wrappers-to-read-and-write-TD-metadata.patch
 	patches.suse/x86-tdx-Rename-tdx_parse_tdinfo-to-tdx_setup.patch
