--- a/series.conf
+++ b/series.conf
@@ -52566,6 +52566,7 @@
 	patches.suse/Revert-drm-amd-display-Exit-idle-optimizations-befor.patch
 	patches.suse/drm-amd-display-Support-multiple-options-during-psr-.patch
 	patches.suse/drm-amd-pm-Skip-P2S-load-for-SMU-v13.0.12.patch
+	patches.suse/drm-amd-include-MES-v11-and-v12-API-header-update.patch
 	patches.suse/drm-amdgpu-reset-psp-cmd-to-NULL-after-releasing-the.patch
 	patches.suse/drm-amd-display-Don-t-try-AUX-transactions-on-discon.patch
 	patches.suse/drm-amd-display-add-workaround-flag-to-link-to-force.patch
