--- a/series.conf
+++ b/series.conf
@@ -12344,6 +12344,7 @@
 	patches.suse/usb-typec-tipd-Clear-interrupts-first.patch
 	patches.suse/Revert-usb-xhci-Avoid-Stop-Endpoint-retry-loop-if-th.patch
 	patches.suse/thunderbolt-Compare-HMAC-values-in-constant-time.patch
+	patches.suse/USB-serial-option-add-SIMCom-8230C-compositions.patch
 	patches.suse/usb-vhci-hcd-Prevent-suspending-virtually-attached-d.patch
 	patches.suse/uio-uio_pdrv_genirq-Remove-MODULE_DEVICE_TABLE.patch
 	patches.suse/misc-genwqe-Fix-incorrect-cmd-field-being-reported-i.patch
