--- a/series.conf
+++ b/series.conf
@@ -1386,6 +1386,7 @@
 	patches.suse/drm-amdgpu-fix-ACA-bank-count-boundary-check-error.patch
 	patches.suse/drm-amdgpu-Fix-map-unmap-queue-logic.patch
 	patches.suse/drm-amdkfd-Fix-wrong-usage-of-INIT_WORK.patch
+	patches.suse/drm-amd-Update-MES-API-header-file-for-v11-v12.patch
 	patches.suse/Revert-drm-amd-display-parse-umc_info-or-vram_info-b.patch
 	patches.suse/kernel-range-Const-ify-range_contains-parameters.patch
 	patches.suse/cxl-core-regs-Add-rcd_pcie_cap-initialization.patch
