--- a/series.conf
+++ b/series.conf
@@ -12093,6 +12093,7 @@
 	patches.suse/drm-amd-display-Allow-RX6xxx-RX7700-to-invoke-amdgpu.patch
 	patches.suse/ALSA-hda-realtek-Add-ALC295-Dell-TAS2781-I2C-fixup.patch
 	patches.suse/ALSA-hda-intel-dsp-config-Prevent-SEGFAULT-if-ACPI_H.patch
+	patches.suse/ASoC-amd-acp-Adjust-pdm-gain-value.patch
 	patches.suse/ASoC-SOF-Intel-hda-stream-Fix-incorrect-variable-use.patch
 	patches.suse/ASoC-wm8940-Correct-PLL-rate-rounding.patch
 	patches.suse/ASoC-wm8940-Correct-typo-in-control-name.patch
