ASoC: rt5682s: Adjust SAR ADC button mode to fix noise issue (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12102,6 +12102,7 @@
 	patches.suse/ASoC-Intel-catpt-Expose-correct-bit-depth-to-userspa.patch
 	patches.suse/ASoC-qcom-audioreach-Fix-lpaif_type-configuration-fo.patch
 	patches.suse/ASoC-qcom-q6apm-lpass-dais-Fix-missing-set_fmt-DAI-o.patch
+	patches.suse/ASoC-rt5682s-Adjust-SAR-ADC-button-mode-to-fix-noise.patch
 	patches.suse/ALSA-hda-realtek-Fix-mute-led-for-HP-Laptop-15-dw4xx.patch
 	patches.suse/crypto-af_alg-Set-merge-to-zero-early-in-af_alg_send.patch
 	patches.suse/mmc-mvsdio-Fix-dma_unmap_sg-nents-value.patch
