--- a/series.conf
+++ b/series.conf
@@ -12136,6 +12136,7 @@
 	patches.suse/fbcon-Fix-OOB-access-in-font-allocation.patch
 	patches.suse/drm-panthor-Defer-scheduler-entitiy-destruction-to-q.patch
 	patches.suse/gpiolib-Extend-software-node-support-to-support-seco.patch
+	patches.suse/platform-x86-amd-pmc-Add-Stellaris-Slim-Gen6-AMD-to-.patch
 	patches.suse/platform-x86-lg-laptop-Fix-WMAB-call-in-fan_mode_sto.patch
 	patches.suse/fs-proc-task_mmu-check-p-vec_buf-for-NULL.patch
 	patches.suse/i2c-riic-Allow-setting-frequencies-lower-than-50KHz.patch
