--- a/series.conf
+++ b/series.conf
@@ -12078,6 +12078,7 @@
 	patches.suse/power-supply-bq27xxx-restrict-no-battery-detection-t.patch
 	patches.suse/btrfs-fix-invalid-extref-key-setup-when-replaying-de.patch
 	patches.suse/btrfs-initialize-inode-file_extent_tree-after-i_mode.patch
+	patches.suse/platform-x86-amd-pmc-Add-MECHREVO-Yilong15Pro-to-spu.patch
 	patches.suse/platform-x86-asus-wmi-Re-add-extra-keys-to-ignore_ke.patch
 	patches.suse/KVM-arm64-Mark-freed-S2-MMUs-as-invalid.patch
 	patches.suse/KVM-arm64-vgic-fix-incorrect-spinlock-API-usage.patch
