--- a/series.conf
+++ b/series.conf
@@ -33721,6 +33721,7 @@
 	patches.suse/s390-time-Use-monotonic-clock-in-get_cycles.patch
 	patches.suse/arm64-Mark-kernel-as-tainted-on-SAE-and-SError-panic.patch
 	patches.suse/kselftest-arm64-Fix-check-for-setting-new-VLs-in-sve.patch
+	patches.suse/powerpc-floppy-Add-missing-checks-after-DMA-map.patch
 	patches.suse/powerpc-pseries-Correct-secvar-format-representation.patch
 	patches.suse/powerpc-secvar-Expose-secvars-relevant-to-the-key-ma.patch
 	patches.suse/integrity-platform_certs-Allow-loading-of-keys-in-th.patch
