powerpc: floppy: Add missing checks after DMA map (bsc#1215199).

--- a/series.conf
+++ b/series.conf
@@ -11122,6 +11122,7 @@
 	patches.suse/ACPI-Return-ENODEV-from-acpi_parse_spcr-when-SPCR-su.patch
 	patches.suse/ACPI-Suppress-misleading-SPCR-console-message-when-S.patch
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
+	patches.suse/powerpc-floppy-Add-missing-checks-after-DMA-map.patch
 	patches.suse/powerpc-pseries-Correct-secvar-format-representation.patch
 	patches.suse/powerpc-secvar-Expose-secvars-relevant-to-the-key-ma.patch
 	patches.suse/integrity-platform_certs-Allow-loading-of-keys-in-th.patch
