--- a/series.conf
+++ b/series.conf
@@ -34202,6 +34202,7 @@
 	patches.suse/pinctrl-STMFX-add-missing-HAS_IOMEM-dependency.patch
 	patches.suse/vhost-net-Protect-ubufs-with-rcu-read-lock-in-vhost_.patch
 	patches.suse/KVM-PPC-Fix-misleading-interrupts-comment-in-kvmppc_prepare_to_enter.patch
+	patches.suse/powerpc-kvm-Fix-ifdef-to-remove-build-warning.patch
 	patches.suse/dma-pool-Ensure-DMA_DIRECT_REMAP-allocations-are-dec.patch
 	patches.suse/Bluetooth-hci_event-Treat-UNKNOWN_CONN_ID-on-disconn.patch
 	patches.suse/Bluetooth-hci_event-Mark-connection-as-closed-during.patch
