KVM: PPC: Fix misleading interrupts comment in kvmppc_prepare_to_enter() (bsc#1215199).

--- a/series.conf
+++ b/series.conf
@@ -34201,6 +34201,7 @@
 	patches.suse/x86-cpu-hygon-Add-missing-resctrl_cpu_detect-in-bsp_i.patch
 	patches.suse/pinctrl-STMFX-add-missing-HAS_IOMEM-dependency.patch
 	patches.suse/vhost-net-Protect-ubufs-with-rcu-read-lock-in-vhost_.patch
+	patches.suse/KVM-PPC-Fix-misleading-interrupts-comment-in-kvmppc_prepare_to_enter.patch
 	patches.suse/dma-pool-Ensure-DMA_DIRECT_REMAP-allocations-are-dec.patch
 	patches.suse/Bluetooth-hci_event-Treat-UNKNOWN_CONN_ID-on-disconn.patch
 	patches.suse/Bluetooth-hci_event-Mark-connection-as-closed-during.patch
