--- a/series.conf
+++ b/series.conf
@@ -11842,6 +11842,7 @@
 	patches.suse/perf-test-Fix-a-build-error-in-x86-topdown-test.patch
 	patches.suse/perf-symbol-minimal-Fix-ehdr-reading-in-filename__read_bui.patch
 	patches.suse/KVM-PPC-Fix-misleading-interrupts-comment-in-kvmppc_prepare_to_enter.patch
+	patches.suse/powerpc-kvm-Fix-ifdef-to-remove-build-warning.patch
 	patches.suse/dma-pool-Ensure-DMA_DIRECT_REMAP-allocations-are-dec.patch
 	patches.suse/idpf-add-support-for-Tx-refillqs-in-flow-scheduling-.patch
 	patches.suse/idpf-improve-when-to-set-RE-bit-logic.patch
