--- a/series.conf
+++ b/series.conf
@@ -32719,6 +32719,7 @@
 	patches.suse/powerpc-pseries-msi-Avoid-reading-PCI-device-registe.patch
 	patches.suse/powerpc-do-not-build-ppc_save_regs.o-always.patch
 	patches.suse/powerpc-Don-t-use-in-kernel-logs.patch
+	patches.suse/powerpc-boot-Fix-build-with-gcc-15.patch
 	patches.suse/powerpc-kernel-Fix-ppc_save_regs-inclusion-in-build.patch
 	patches.suse/sched-rt-Fix-race-in-push_rt_task.patch
 	patches.suse/x86-microcode-AMD-Do-not-return-error-when-microcode-updat.patch
