powerpc/pseries/msi: Fix potential underflow and leak issue (bsc#1215199).

--- a/series.conf
+++ b/series.conf
@@ -12139,6 +12139,7 @@
 	patches.suse/erofs-avoid-reading-more-for-fragment-maps.patch
 	patches.suse/seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-the-tracer-r.patch
 	patches.suse/arm64-map-_text-_stext-virtual-address-range-non-executabl.patch
+	patches.suse/powerpc-pseries-msi-Fix-potential-underflow-and-leak-issue.patch
 	patches.suse/powerpc-ftrace-ensure-ftrace-record-ops-are-always-set-for-NOPs.patch
 	patches.suse/powerpc64-modules-correctly-iterate-over-stubs-in-setup_ftrace_ool_stubs.patch
 	patches.suse/btrfs-return-any-hit-error-from-extent_writepage_io.patch
