KVM: PPC: Fix misleading interrupts comment in kvmppc_prepare_to_enter() (bsc#1215199).

--- a/series.conf
+++ b/series.conf
@@ -11841,6 +11841,7 @@
 	patches.suse/vhost-Fix-ioctl-for-VHOST_-GS-ET_FORK_FROM_OWNER.patch
 	patches.suse/perf-test-Fix-a-build-error-in-x86-topdown-test.patch
 	patches.suse/perf-symbol-minimal-Fix-ehdr-reading-in-filename__read_bui.patch
+	patches.suse/KVM-PPC-Fix-misleading-interrupts-comment-in-kvmppc_prepare_to_enter.patch
 	patches.suse/dma-pool-Ensure-DMA_DIRECT_REMAP-allocations-are-dec.patch
 	patches.suse/idpf-add-support-for-Tx-refillqs-in-flow-scheduling-.patch
 	patches.suse/idpf-improve-when-to-set-RE-bit-logic.patch
