--- a/series.conf
+++ b/series.conf
@@ -12274,6 +12274,7 @@
 	patches.suse/smb-client-fix-crypto-buffers-in-non-linear-memory.patch
 	patches.suse/NFSv4.1-fix-backchannel-max_resp_sz-verification-check.patch
 	patches.suse/docs-admin-guide-update-to-current-minimum-pipe-size.patch
+	patches.suse/RDMA-mana_ib-Drain-send-wrs-of-GSI-QP.patch
 	patches.suse/RDMA-mlx5-Better-estimate-max_qp_wr-to-reflect-WQE-c.patch
 	patches.suse/RDMA-mlx5-Fix-vport-loopback-forcing-for-MPV-device.patch
 	patches.suse/RDMA-cm-Rate-limit-destroy-CM-ID-timeout-error-messa.patch
