--- a/series.conf
+++ b/series.conf
@@ -12242,6 +12242,7 @@
 	patches.suse/media-uvcvideo-Mark-invalid-entities-with-id-UVC_INV.patch
 	patches.suse/media-b2c2-Fix-use-after-free-causing-by-irq_check_w.patch
 	patches.suse/media-tuner-xc5000-Fix-use-after-free-in-xc5000_rele.patch
+	patches.suse/net-mana-Use-page-pool-fragments-for-RX-buffers-inst.patch
 	patches.suse/wifi-mwifiex-send-world-regulatory-domain-to-driver.patch
 	patches.suse/wifi-iwlwifi-Remove-redundant-header-files.patch
 	patches.suse/wifi-mt76-fix-potential-memory-leak-in-mt76_wmac_pro.patch
