--- a/series.conf
+++ b/series.conf
@@ -12278,6 +12278,7 @@
 	patches.suse/RDMA-mlx5-Better-estimate-max_qp_wr-to-reflect-WQE-c.patch
 	patches.suse/RDMA-mlx5-Fix-vport-loopback-forcing-for-MPV-device.patch
 	patches.suse/RDMA-cm-Rate-limit-destroy-CM-ID-timeout-error-messa.patch
+	patches.suse/RDMA-mana_ib-Extend-modify-QP.patch
 	patches.suse/RDMA-core-Resolve-MAC-of-next-hop-device-without-ARP.patch
 	patches.suse/IB-sa-Fix-sa_local_svc_timeout_ms-read-race.patch
 	patches.suse/RDMA-rxe-Fix-race-in-do_task-when-draining.patch
