--- a/series.conf
+++ b/series.conf
@@ -11109,6 +11109,7 @@
 	patches.suse/x86-bugs-Add-SRSO_MITIGATION_NOSMT.patch
 	patches.suse/x86-bugs-Use-IBPB-for-retbleed-if-used-by-SRSO.patch
 	patches.suse/x86-bugs-Clean-up-SRSO-microcode-handling.patch
+	patches.suse/Documentation-x86-Document-new-attack-vector-controls.patch
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
 	patches.suse/sched-fair-Bump-sd-max_newidle_lb_cost-when-newidle-balance-fails.patch
 	patches.suse/sched-psi-Optimize-psi_group_change-cpu_clock-usage.patch
