--- a/series.conf
+++ b/series.conf
@@ -11112,6 +11112,7 @@
 	patches.suse/Documentation-x86-Document-new-attack-vector-controls.patch
 	patches.suse/cpu-Define-attack-vectors.patch
 	patches.suse/x86-Kconfig-Add-arch-attack-vector-support.patch
+	patches.suse/x86-bugs-Define-attack-vectors-relevant-for-each-bug.patch
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
 	patches.suse/sched-fair-Bump-sd-max_newidle_lb_cost-when-newidle-balance-fails.patch
 	patches.suse/sched-psi-Optimize-psi_group_change-cpu_clock-usage.patch
