--- a/series.conf
+++ b/series.conf
@@ -11113,6 +11113,7 @@
 	patches.suse/cpu-Define-attack-vectors.patch
 	patches.suse/x86-Kconfig-Add-arch-attack-vector-support.patch
 	patches.suse/x86-bugs-Define-attack-vectors-relevant-for-each-bug.patch
+	patches.suse/x86-bugs-Add-attack-vector-controls-for-MDS.patch
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
 	patches.suse/sched-fair-Bump-sd-max_newidle_lb_cost-when-newidle-balance-fails.patch
 	patches.suse/sched-psi-Optimize-psi_group_change-cpu_clock-usage.patch
