--- a/series.conf
+++ b/series.conf
@@ -11117,6 +11117,7 @@
 	patches.suse/x86-bugs-Add-attack-vector-controls-for-TAA.patch
 	patches.suse/x86-bugs-Add-attack-vector-controls-for-MMIO.patch
 	patches.suse/x86-bugs-Add-attack-vector-controls-for-RFDS.patch
+	patches.suse/x86-bugs-Add-attack-vector-controls-for-SRBDS.patch
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
 	patches.suse/sched-fair-Bump-sd-max_newidle_lb_cost-when-newidle-balance-fails.patch
 	patches.suse/sched-psi-Optimize-psi_group_change-cpu_clock-usage.patch
