x86/bugs: Add attack vector controls for retbleed (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11120,6 +11120,7 @@
 	patches.suse/x86-bugs-Add-attack-vector-controls-for-SRBDS.patch
 	patches.suse/x86-bugs-Add-attack-vector-controls-for-GDS.patch
 	patches.suse/x86-bugs-Add-attack-vector-controls-for-spectre_v1.patch
+	patches.suse/x86-bugs-Add-attack-vector-controls-for-retbleed.patch
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
 	patches.suse/sched-fair-Bump-sd-max_newidle_lb_cost-when-newidle-balance-fails.patch
 	patches.suse/sched-psi-Optimize-psi_group_change-cpu_clock-usage.patch
