x86/bugs: Add attack vector controls for ITS (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11126,6 +11126,7 @@
 	patches.suse/x86-bugs-Add-attack-vector-controls-for-spectre_v2.patch
 	patches.suse/x86-bugs-Add-attack-vector-controls-for-L1TF.patch
 	patches.suse/x86-bugs-Add-attack-vector-controls-for-SRSO.patch
+	patches.suse/x86-bugs-Add-attack-vector-controls-for-ITS.patch
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
 	patches.suse/sched-fair-Bump-sd-max_newidle_lb_cost-when-newidle-balance-fails.patch
 	patches.suse/sched-psi-Optimize-psi_group_change-cpu_clock-usage.patch
