--- a/series.conf
+++ b/series.conf
@@ -11128,6 +11128,7 @@
 	patches.suse/x86-bugs-Add-attack-vector-controls-for-SRSO.patch
 	patches.suse/x86-bugs-Add-attack-vector-controls-for-ITS.patch
 	patches.suse/x86-pti-Add-attack-vector-controls-for-PTI.patch
+	patches.suse/x86-bugs-Add-attack-vector-controls-for-TSA.patch
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
 	patches.suse/sched-fair-Bump-sd-max_newidle_lb_cost-when-newidle-balance-fails.patch
 	patches.suse/sched-psi-Optimize-psi_group_change-cpu_clock-usage.patch
