x86/bugs: Select best SRSO mitigation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11743,6 +11743,7 @@
 	patches.suse/scsi-lpfc-Fix-wrong-function-reference-in-a-comment.patch
 	patches.suse/scsi-lpfc-Remove-redundant-assignment-to-avoid-memor.patch
 	patches.suse/ata-libata-scsi-Fix-CDL-control.patch
+	patches.suse/x86-bugs-Select-best-SRSO-mitigation.patch
 	patches.suse/jbd2-prevent-softlockup-in-jbd2_log_do_checkpoint.patch
 	patches.suse/btrfs-fix-incorrect-log-message-for-nobarrier-mount-.patch
 	patches.suse/btrfs-restore-mount-option-info-messages-during-moun.patch
