--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1154,3 +1154,4 @@ d613f53c83ec47089c4e25859d5e8e0359f6f8da # CVE-2025-39883 https://bugzilla.suse.
 6851a0c228fc040dce8e4c393004209e7372e0a3 # cleanup with almost unfixable kABI damage
 e3c4891098c875a63ab0c3b31d584f6d4f1895fd # unsupported driver
 a4c5a468c6329bde7dfd46bacff2cbf5f8a8152e # would require updated firmware
+e9c206324eeb213957a567a9d066bdeb355c7491 # pure optimization
