--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1155,3 +1155,4 @@ d613f53c83ec47089c4e25859d5e8e0359f6f8da # CVE-2025-39883 https://bugzilla.suse.
 e3c4891098c875a63ab0c3b31d584f6d4f1895fd # unsupported driver
 a4c5a468c6329bde7dfd46bacff2cbf5f8a8152e # would require updated firmware
 e9c206324eeb213957a567a9d066bdeb355c7491 # pure optimization
+75a5b8d4ddd4eb6b16cb0b475d14ff4ae64295ef # pure cleanup
