--- a/series.conf
+++ b/series.conf
@@ -34498,6 +34498,7 @@
 	patches.suse/usb-misc-qcom_eud-Access-EUD_MODE_MANAGER2-through-s.patch
 	patches.suse/usb-phy-twl6030-Fix-incorrect-type-for-ret.patch
 	patches.suse/thunderbolt-Compare-HMAC-values-in-constant-time.patch
+	patches.suse/USB-serial-option-add-SIMCom-8230C-compositions.patch
 	patches.suse/uio-uio_pdrv_genirq-Remove-MODULE_DEVICE_TABLE.patch
 	patches.suse/misc-genwqe-Fix-incorrect-cmd-field-being-reported-i.patch
 	patches.suse/iio-xilinx-ams-Unmask-interrupts-after-updating-alar.patch
