Revert "net: bonding: add broadcast_neighbor netlink option" (bsc#1250894).

--- a/series.conf
+++ b/series.conf
@@ -127,6 +127,7 @@
 	patches.suse/fs-return-EOPNOTSUPP-from-file_setattr-file_getattr-.patch
 	patches.suse/Revert-io_uring-rw-drop-EOPNOTSUPP-check-in-__io_com.patch
 	patches.suse/Revert-net-bonding-send-peer-notify-when-failure-rec.patch
+	patches.suse/Revert-net-bonding-add-broadcast_neighbor-netlink-op.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
