Revert "net: bonding: add broadcast_neighbor option for 802.3ad" (bsc#1250894).

--- a/series.conf
+++ b/series.conf
@@ -128,6 +128,7 @@
 	patches.suse/Revert-io_uring-rw-drop-EOPNOTSUPP-check-in-__io_com.patch
 	patches.suse/Revert-net-bonding-send-peer-notify-when-failure-rec.patch
 	patches.suse/Revert-net-bonding-add-broadcast_neighbor-netlink-op.patch
+	patches.suse/Revert-net-bonding-add-broadcast_neighbor-option-for.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
