--- a/series.conf
+++ b/series.conf
@@ -126,6 +126,7 @@
 	patches.suse/Revert-fs-make-vfs_fileattr_-get-set-return-EOPNOTSU.patch
 	patches.suse/fs-return-EOPNOTSUPP-from-file_setattr-file_getattr-.patch
 	patches.suse/Revert-io_uring-rw-drop-EOPNOTSUPP-check-in-__io_com.patch
+	patches.suse/Revert-net-bonding-send-peer-notify-when-failure-rec.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
