--- a/blacklist.conf
+++ b/blacklist.conf
@@ -547,3 +547,4 @@ d613f53c83ec47089c4e25859d5e8e0359f6f8da # CVE-2025-39883 https://bugzilla.suse.
 74792608606a525a0e0df7e8d48acd8000561389 # cleanup, no code change
 a02b0cde8ee515ee0c8efd33e7fbe6830c282e69 # Fix for scripts/gdb
 711b5875814b2a0e9a5aaf7a85ba7c80f5a389b1 # compile fix only
+3f36ee29e732b68044d531f47d31f22d265954c6 # 32 bit, selftests
