blacklist.conf: nolibc doesn't matter to us

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -73,6 +73,7 @@ fs/smb/server
 mm/damon				# Not enabled
 mm/kmemleak.c				# Not enabled
 mm/kmsan				# Not enabled
+tools/include/nolibc/			# unsupported architecture
 tools/objtool/arch/loongarch/		# unsupported architecture
 
 # Unsupported ppc platforms
