trace/fgraph: Fix error handling (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11993,6 +11993,7 @@
 	patches.suse/perf-bpf-utils-Harden-get_bpf_prog_info_linear.patch
 	patches.suse/ACPI-RISC-V-Fix-FFH_CPPC_CSR-error-handling.patch
 	patches.suse/i2c-i801-Hide-Intel-Birch-Stream-SoC-TCO-WDT.patch
+	patches.suse/trace-fgraph-Fix-error-handling.patch
 	patches.suse/NFSv4-Don-t-clear-capabilities-that-won-t-be-reset.patch
 	patches.suse/NFSv4-Clear-the-NFS_CAP_FS_LOCATIONS-flag-if-it-is-not-set.patch
 	patches.suse/NFSv4-Clear-NFS_CAP_OPEN_XOR-and-NFS_CAP_DELEGTIME-if-not-supported.patch
