blacklist.conf: Documentation only

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -551,3 +551,4 @@ a02b0cde8ee515ee0c8efd33e7fbe6830c282e69 # Fix for scripts/gdb
 0d6efa20e384a41a7f4afdcd8a0aec442c19d33e # SPARC only
 d9c4037fed897ddcb512fdf03bafed9451cb5006 # Documentation for selftest
 d3f2a9587ebe68f5067f9ff624f9a83dfb911f60 # build fix only
+331843c845d15413e9d89fd91cdcfa6912e291c3 # Documentation only
